# pyfranka

./: CMakeLists.txt  README.md  setup.py
examples/: franka_move_gripper.cpp  franka_move_to_relative_joints.cpp  franka_move_to_relative_pose.cpp  franka_move_velocity.cpp
include/: gripper.h  lssab_trajectory.h  robot.h  ssab_trajectory.h  trajectory.h  utils.h
pyfranka/: __init__.py
src/: gripper.cpp  lssab_trajectory.cpp  python.cpp  robot.cpp  ssab_trajectory.cpp  utils.cpp
